--- a/index.html
+++ b/index.html
@@ -12,46 +12,56 @@
 
         function getRandomValue() {
         return Math.floor(Math.random() * 3) + 1; 
-        }
+        } //This method gets random value.
 
         function computerPlay() {
-            if (getRandomValue() == 1) {
+            let randomValue = getRandomValue();
+            if (randomValue == 1) {
                 return "rock";
-            } else if (getRandomValue() == 2) {
-                return "paper";
+            } else if (randomValue == 2) {
+                return"paper";
             } else {
                 return "scissors";
             }
-        } 
+        } //This method ascribes previously random generated number to proper value.
 
         function playRound(playerSelection, computerSelection) {
             playerSelection = prompt("Rock, paper, scissors?").toLowerCase();
-            if ((computerSelection === "rock" && playerSelection === "rock") || (computerSelection === "paper" && playerSelection === "paper") || (computerSelection === "scissors" && playerSelection === "scissors")) {
+            //This method asks player to prompt a weapon of choice
+            if ((computerSelection === "rock" && playerSelection === "rock") || 
+                (computerSelection === "paper" && playerSelection === "paper") || 
+                (computerSelection === "scissors" && playerSelection === "scissors")) {
                 return "It's a tie!";
-            } else if ((computerSelection === "paper" && playerSelection === "rock") || (computerSelection == "scissors" && playerSelection === "paper") || (computerSelection == "rock" && playerSelection === "scissors")) {
+            } else if ((computerSelection === "paper" && playerSelection === "rock") || 
+                (computerSelection === "scissors" && playerSelection === "paper") || 
+                (computerSelection === "rock" && playerSelection === "scissors")) {
                 computerScore++;
                 return "Computer wins this round!";
-            } else if ((playerSelection === "paper" && computerSelection === "rock") || (playerSelection === "scissors" && computerSelection === "paper") || (playerSelection == "rock" && computerSelection === "scissors")) {
+            } else if ((playerSelection === "paper" && computerSelection === "rock") || 
+                (playerSelection === "scissors" && computerSelection === "paper") || 
+                (playerSelection === "rock" && computerSelection === "scissors")) {
                 playerScore++;
                 return "You win this round!";
             } else {
                 return "You have to choose your weapon!";
             }
-        }
+        } //playRound function decides who wins the round and adds points to the winner.
 
-        function game() {
+        function playGame() {
             while (playerScore <= 3 && computerScore <= 3) {
-            alert(playRound(playerSelection, computerSelection))
+            alert(playRound(playerSelection, computerPlay()));
             if (playerScore == 3) {
-                console.log("You win with " + playerScore + " to " + computerScore + ". Refresh the page to play again!");
+                alert("You win with " + playerScore + " to " + computerScore + 
+                ". Refresh the page to play again!");
                 break;
             } else if (computerScore == 3) {
-                console.log("You lose this time. Computer's score: " + computerScore + " Your score: " + playerScore + ". Refresh the page to play again!");
+                alert("You lose this time. Computer's score: " + computerScore + 
+                " Your score: " + playerScore + ". Refresh the page to play again!");
                 break;
             }
             }
-        }
-        game();
+        } //This method lets a person play against computer up to 3 victories.
+        playGame();
         </script>
     </body>
 </html>
